--- a/wherehows-web/app/styles/components/_all.scss
+++ b/wherehows-web/app/styles/components/_all.scss
@@ -27,6 +27,7 @@
 @import 'dataset-relationships/all';
 @import 'visualization/all';
 @import 'dataset-health/all';
+@import 'search/all';
 
 @import 'nacho/nacho-button';
 @import 'nacho/nacho-global-search';
