updates jit acl tab & navbar to use avatars/avatar-image component

--- a/wherehows-web/app/styles/components/_navbar.scss
+++ b/wherehows-web/app/styles/components/_navbar.scss
@@ -118,3 +118,12 @@ $navbar-transition-speed: $banner-animation-speed;
     border-radius: 0;
   }
 }
+
+/**
+ * Adds styles for navigation bar avatar image
+ */
+.navbar-avatar-image {
+  &#{&} {
+    @include round-image(item-spacing(6));
+  }
+}
