--- a/wherehows-web/app/templates/components/datasets/containers/dataset-acl-access.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/dataset-acl-access.hbs
@@ -8,6 +8,7 @@
     {{dataset-aclaccess
       acls=acls
       aclMoreInfoLink=@aclMoreInfoLink
+      avatarProperties=avatarProperties
       jitAclContact=jitAclContact
       hasValidAclRequest=hasValidAclRequest
       userAclRequest=userAclRequest
