--- a/wherehows-web/app/templates/components/datasets/containers/dataset-ownership.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/dataset-ownership.hbs
@@ -33,6 +33,7 @@
       {{dataset-authors
         owners=owners
         suggestedOwners=suggestedOwners
+        avatarProperties=avatarProperties
         ownerTypes=ownerTypes
         setOwnershipRuleChange=setOwnershipRuleChange
         save=(action "saveOwnerChanges")
