Facets improved, working. Testing, docs, cleanup pending

--- a/wherehows-web/app/templates/application.hbs
+++ b/wherehows-web/app/templates/application.hbs
@@ -10,7 +10,7 @@
           Search for datasets
         </header>
         <section class="nacho-hero__content">
-          {{search-bar-form didSearch=(action "didSearch")}}
+          {{search-bar-form selection=model.keyword didSearch=(action "didSearch")}}
         </section>
       {{/hero-container}}
 
