--- a/wherehows-web/app/templates/components/search-bar-form.hbs
+++ b/wherehows-web/app/templates/components/search-bar-form.hbs
@@ -3,6 +3,7 @@
     <label for="search-input" class="sr-only">Search</label>
 
     {{aupac-typeahead
+      selection=(readonly selection)
       action=(action "onSelectedSuggestion")
       autoFocus=true
       allowFreeInput=true
