--- a/wherehows-web/app/templates/components/dataset-author.hbs
+++ b/wherehows-web/app/templates/components/dataset-author.hbs
@@ -1,75 +1,76 @@
-<td>
-  {{#unless isOwnerInActive}}
-    {{avatars/avatar-image avatar=@owner.avatar}}
-  {{/unless}}
-
-  {{@owner.userName}}
-
-  {{#if isOwnerInActive}}
-
-    <span class="nacho-button nacho-button--small dataset-author-record__indicator--inactive">
-      Inactive
-    </span>
-
-  {{/if}}
-</td>
-
-<td>
-  {{@owner.name}}
-</td>
-
-<td>
-  {{@owner.idType}}
-</td>
-
-{{!-- hides source column for confirmed owners--}}
-{{#unless isOwnerMutable}}
-
+{{#let @owner.owner as |ownerRecord|}}
   <td>
-    {{@owner.source}}
+    {{#unless isOwnerInActive}}
+      {{avatars/avatar-image avatar=@owner.avatar}}
+    {{/unless}}
+
+    {{ownerRecord.userName}}
+
+    {{#if isOwnerInActive}}
+
+      <span class="nacho-button nacho-button--small dataset-author-record__indicator--inactive">
+        Inactive
+      </span>
+
+    {{/if}}
   </td>
 
-{{/unless}}
+  <td>
+    {{ownerRecord.name}}
+  </td>
 
-<td>
-  {{ember-selector
-    class=(unless isOwnerMutable "nacho-select--hidden-state")
-    values=ownerTypes
-    selected=@owner.type
-    disabled=(not isOwnerMutable)
-    selectionDidChange=(action "changeOwnerType")
-  }}
-</td>
+  <td>
+    {{ownerRecord.idType}}
+  </td>
 
-<td>
-  {{#if isOwnerMutable}}
+  {{!-- hides source column for confirmed owners--}}
+  {{#unless isOwnerMutable}}
 
-    <button
-      class="nacho-button nacho-button--small remove-dataset-author"
-      {{action "onRemoveOwner"}}>
-      <i class="fa fa-trash"
-         aria-label="Remove Owner"></i>
-    </button>
+    <td>
+      {{ownerRecord.source}}
+    </td>
 
-  {{else}}
+  {{/unless}}
 
-    {{#if isConfirmedSuggestedOwner}}
+  <td>
+    {{ember-selector
+      class=(unless isOwnerMutable "nacho-select--hidden-state")
+      values=ownerTypes
+      selected=ownerRecord.type
+      disabled=(not isOwnerMutable)
+      selectionDidChange=(action "changeOwnerType")
+    }}
+  </td>
 
-      <span
-        class="nacho-button nacho-button--small dataset-author-record__indicator--disabled">
-        Added
-      </span>
+  <td>
+    {{#if isOwnerMutable}}
+
+      <button
+        class="nacho-button nacho-button--small remove-dataset-author"
+        {{action "onRemoveOwner"}}>
+        <i class="fa fa-trash"
+           aria-label="Remove Owner"></i>
+      </button>
 
     {{else}}
 
-      <button
-        class="nacho-button nacho-button--small confirm-suggested-dataset-author"
-        {{action "confirmOwner"}}>
-        <i class="fa fa-plus" title="Add an Owner"></i>
-      </button>
+      {{#if isConfirmedSuggestedOwner}}
+
+        <span
+          class="nacho-button nacho-button--small dataset-author-record__indicator--disabled">
+          Added
+        </span>
+
+      {{else}}
+
+        <button
+          class="nacho-button nacho-button--small confirm-suggested-dataset-author"
+          {{action "confirmOwner"}}>
+          <i class="fa fa-plus" title="Add an Owner"></i>
+        </button>
+
+      {{/if}}
 
     {{/if}}
-
-  {{/if}}
-</td>
-
+  </td>
+{{/let}}
