Fix search bar term showing up and clearing

--- a/wherehows-web/app/templates/components/search-bar-form.hbs
+++ b/wherehows-web/app/templates/components/search-bar-form.hbs
@@ -5,7 +5,7 @@
     {{aupac-typeahead
       selection=(readonly selection)
       action=(action "onSelectedSuggestion")
-      autoFocus=true
+      autoFocus=false
       allowFreeInput=true
       source=(action "onInput")
       async=true
