--- a/wherehows-web/app/templates/components/search/containers/search-facets.hbs
+++ b/wherehows-web/app/templates/components/search/containers/search-facets.hbs
@@ -1,5 +1,5 @@
 {{#if getPlatformsTask.isRunning}}
   {{pendulum-ellipsis-animation}}
 {{else}}
-  {{yield facets selections (action onFacetChange) (action onFacetClear)}}
+  {{yield facets selections counts (action onFacetChange) (action onFacetClear)}}
 {{/if}}
