PR feedback comments

--- a/wherehows-web/app/templates/components/search/search-facet.hbs
+++ b/wherehows-web/app/templates/components/search/search-facet.hbs
@@ -1,7 +1,7 @@
 <div class="nacho-container search-facet">
   <section class="search-facet__header">
     <h4 class="search-facet__title">{{facet.displayName}}</h4>
-    {{#if showClear}}
+    {{#if showClearBtn}}
       <button
         class="nacho-button--tertiary"
         {{action onClear facet}}>
