Add a tooltip for health score and remove more info from tooltip messages

--- a/wherehows-web/app/templates/datasets/dataset.hbs
+++ b/wherehows-web/app/templates/datasets/dataset.hbs
@@ -62,7 +62,9 @@
               avatarEntityProps=avatarEntityProps
               class="dataset-owner-list"}}
 
-            {{datasets/containers/health-score-gauge urn=encodedUrn}}
+            {{#link-to "datasets.dataset.health" encodedUrn}}
+              {{datasets/containers/health-score-gauge urn=encodedUrn wikiLinks=wikiLinks}}
+            {{/link-to}}
           {{/if}}
         </div>
 
