--- a/wherehows-web/app/styles/components/visualization/charts/_score-gauge.scss
+++ b/wherehows-web/app/styles/components/visualization/charts/_score-gauge.scss
@@ -14,6 +14,7 @@ $score-gauge-dimension: 128px;
       font-size: 16px;
       font-weight: 600;
       margin: 0;
+      color: get-color(black);
     }
 
     &-value {
