--- a/wherehows-web/app/templates/components/datasets/containers/health-score-gauge.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/health-score-gauge.hbs
@@ -1,8 +1,14 @@
 {{#if getHealthScoreTask.isIdle}}
-  {{visualization/charts/score-gauge
+  {{#visualization/charts/score-gauge
     class="dataset-health-score"
     score=healthScore
-    title="Health Score:"}}
+    customTitleTemplate=true}}
+    Health Score:
+    {{more-info
+      link=@wikiLinks.metadataHealth
+      tooltip="Click for more information on Metadata Health Score"
+    }}
+  {{/visualization/charts/score-gauge}}
 {{else}}
   {{pendulum-ellipsis-animation}}
 {{/if}}
