health score enhancements code cleanup

--- a/wherehows-web/app/templates/components/datasets/containers/health-score-gauge.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/health-score-gauge.hbs
@@ -1,8 +1,7 @@
 {{#if getHealthScoreTask.isIdle}}
   {{#visualization/charts/score-gauge
     class="dataset-health-score"
-    score=healthScore
-    customTitleTemplate=true}}
+    score=healthScore}}
     Health Score:
     {{more-info
       link=@wikiLinks.metadataHealth
