replaces onImageFallback method on avatar-image with e-c task. adds contrasting bg-color for image fallback

--- a/wherehows-web/app/styles/components/avatar/_avatar.scss
+++ b/wherehows-web/app/styles/components/avatar/_avatar.scss
@@ -59,6 +59,7 @@
   box-sizing: border-box;
   background-clip: content-box;
   border: 2px solid transparent;
+  background-color: get-color(silver3);
 
   &--stacked {
     border: 2px solid white;
