--- a/wherehows-web/app/templates/datasets/dataset-compliance/-dataset-compliance-entities.hbs
+++ b/wherehows-web/app/templates/datasets/dataset-compliance/-dataset-compliance-entities.hbs
@@ -360,6 +360,10 @@
                                       <section class="dataset-compliance-fields__compliance-info-column">
                                         <header class="dataset-compliance-fields__compliance-info-column__title">
                                           <strong>Is purge key?</strong>
+                                          {{more-info
+                                            link=@wikiLinks.purgeKey
+                                            tooltip="Click for more information about purge keys"
+                                          }}
                                         </header>
 
                                         <div class="dataset-compliance-fields__compliance-info-column__content">
