--- a/wherehows-web/app/templates/components/datasets/containers/dataset-health.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/dataset-health.hbs
@@ -1,10 +1,12 @@
 <h3>Metadata Health</h3>
-{{datasets/health/metrics-charts
-  isActiveTab=isActiveTab
-  categoryData=renderedCategories
-  severityData=renderedSeverity
-  onCategorySelect=(action onFilterSelect "category")
-  onSeveritySelect=(action onFilterSelect "severity")}}
+{{#unless tableData.length}}
+  {{datasets/health/metrics-charts
+    isActiveTab=isActiveTab
+    categoryData=renderedCategories
+    severityData=renderedSeverity
+    onCategorySelect=(action onFilterSelect "category")
+    onSeveritySelect=(action onFilterSelect "severity")}}
+{{/unless}}
 {{datasets/health/score-table
   tableData=tableData
   currentCategoryFilter=currentCategoryFilter
