propagates qps to container

--- a/wherehows-web/app/templates/components/datasets/containers/dataset-compliance.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/dataset-compliance.hbs
@@ -25,6 +25,7 @@
       schemaless=schemaless
       platform=platform
       wikiLinks=@wikiLinks
+      fieldReviewOption=@complianceTagFilter
       complianceInfo=complianceInfo
       exportPolicy=exportPolicy
       complianceSuggestion=complianceSuggestion
@@ -32,6 +33,7 @@
       isNewComplianceInfo=isNewComplianceInfo
       schemaFieldNamesMappedToDataTypes=schemaFieldNamesMappedToDataTypes
       complianceDataTypes=complianceDataTypes
+      onComplianceTagFilterChange=@onComplianceTagFilterChange
       notifyOnComplianceSuggestionFeedback=(action "onSuggestionsComplianceFeedback")
       notifyOnChangeSetRequiresReview=(action "onCompliancePolicyChangeSetDrift")
       onSave=(action "savePrivacyCompliancePolicy")
