--- a/wherehows-web/app/templates/components/datasets/containers/dataset-health.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/dataset-health.hbs
@@ -1,12 +1,12 @@
 <h3>Metadata Health</h3>
-{{#unless tableData.length}}
+{{#if shouldShowDatasetHealth}}
   {{datasets/health/metrics-charts
     isActiveTab=isActiveTab
     categoryData=renderedCategories
     severityData=renderedSeverity
     onCategorySelect=(action onFilterSelect "category")
     onSeveritySelect=(action onFilterSelect "severity")}}
-{{/unless}}
+{{/if}}
 {{datasets/health/score-table
   tableData=tableData
   currentCategoryFilter=currentCategoryFilter
