use upstream lineage to determine show parents logic vs resolved compliance using fromUpstream

--- a/wherehows-web/app/templates/components/datasets/containers/dataset-compliance.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/dataset-compliance.hbs
@@ -10,11 +10,14 @@
 
 {{else}}
 
-  {{#if complianceInfo.fromUpstream}}
+  {{!-- {{#if complianceInfo.fromUpstream}} --}}
+  {{#if upstreams.length}}
 
     {{datasets/containers/upstream-dataset
       urn=urn
       platform=platform
+      upstreamLineage=upstreams
+      hasResolvedCompliance=complianceInfo.fromUpstream
       upstreamComplianceType=complianceInfo.complianceType
     }}
 
