refactors implementation and design of stacked-avatars-list component: reuses hover-dropdown component to list menu options. repositions component in entity header. adds new core type definition file. implements function to construct a mail-to uri.

--- a/wherehows-web/app/styles/components/_all.scss
+++ b/wherehows-web/app/styles/components/_all.scss
@@ -29,6 +29,7 @@
 @import 'dataset-health/all';
 @import 'search/all';
 @import 'hotkey/all';
+@import 'dataset-owner/all';
 
 @import 'nacho/nacho-button';
 @import 'nacho/nacho-global-search';
