--- a/wherehows-web/app/templates/components/nacho/dropdown/hover-dropdown.hbs
+++ b/wherehows-web/app/templates/components/nacho/dropdown/hover-dropdown.hbs
@@ -1,20 +1,28 @@
-{{#basic-dropdown as |bd|}}
-  {{#bd.trigger class="nacho-drop-down__trigger"
-                onMouseDown=(action "prevent")
-                onMouseEnter=(action "showDropDown")
-                onMouseLeave=(action "hideDropDown")}}
-    <strong class="nacho-drop-down__active">
-      {{selectedDropDown.label}}
-    </strong>
+{{#basic-dropdown renderInPlace=@renderInPlace as |bd|}}
+  {{#if (not-eq @wrappedTriggerComponent true)}}
+    {{#bd.trigger class="nacho-drop-down__trigger"
+                  onMouseDown=(action "prevent")
+                  onMouseEnter=(action "showDropDown")
+                  onMouseLeave=(action "hideDropDown")}}
+      <strong class="nacho-drop-down__active">
+        {{selectedDropDown.label}}
+      </strong>
 
-    {{#if selectedDropDown}}
-      <span class="nacho-drop-down__active__toggle">
-        {{fa-icon (if isExpanded "caret-up" "caret-down")}}
-      </span>
-    {{/if}}
-  {{/bd.trigger}}
+      {{#if selectedDropDown}}
+        <span class="nacho-drop-down__active__toggle">
+          {{fa-icon (if isExpanded "caret-up" "caret-down")}}
+        </span>
+      {{/if}}
+    {{/bd.trigger}}
+  {{/if}}
 
   {{yield (hash
+            trigger=(component bd.trigger
+              onMouseDown=(action "prevent")
+              onMouseEnter=(action "showDropDown")
+              onMouseLeave=(action "hideDropDown")
+            )
+            isExpanded=isExpanded
             content=(component 'nacho/dropdown/dropdown-content'
               baseComponent=bd.content
               onMouseEnter=(action "showDropDown")
