--- a/wherehows-web/app/templates/components/datasets/containers/dataset-compliance.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/dataset-compliance.hbs
@@ -30,6 +30,7 @@
       fieldReviewOption=@complianceTagFilter
       complianceInfo=complianceInfo
       exportPolicy=exportPolicy
+      retentionPolicy=retentionPolicy
       complianceSuggestion=complianceSuggestion
       suggestionConfidenceThreshold=suggestionConfidenceThreshold
       isNewComplianceInfo=isNewComplianceInfo
