--- a/wherehows-web/app/templates/components/datasets/containers/dataset-compliance.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/dataset-compliance.hbs
@@ -42,7 +42,7 @@
       onSave=(action "savePrivacyCompliancePolicy")
       onSaveRetentionPolicy=(action "saveRetentionPolicy")
       onSaveExportPolicy=(action "saveExportPolicy")
-      onReset=(action "resetPrivacyCompliancePolicy")
+      onReset=(action "resetAll")
       onComplianceJsonUpdate=(action "onComplianceJsonUpdate")
     }}
 
