implements last saved by feature as a shareable component and adds metadata to ownership view

--- a/wherehows-web/app/styles/components/_all.scss
+++ b/wherehows-web/app/styles/components/_all.scss
@@ -30,6 +30,7 @@
 @import 'search/all';
 @import 'hotkey/all';
 @import 'dataset-owner/all';
+@import 'last-saved-by/all';
 
 @import 'nacho/nacho-button';
 @import 'nacho/nacho-global-search';
