--- a/wherehows-web/app/templates/components/datasets/containers/dataset-ownership.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/dataset-ownership.hbs
@@ -30,6 +30,10 @@
 
     {{else}}
 
+      <div class="ownership-metadata">
+        {{last-saved-by actor=ownershipMetadata.actor time=ownershipMetadata.modificationTime}}
+      </div>
+
       {{dataset-authors
         owners=owners
         suggestedOwners=suggestedOwners
