--- a/wherehows-web/app/templates/components/datasets/containers/dataset-properties.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/dataset-properties.hbs
@@ -2,6 +2,7 @@
   deprecated=deprecated
   deprecationNote=deprecationNote
   decommissionTime=decommissionTime
+  wikiLinks=wikiLinks
   onUpdateDeprecation=(action "updateDeprecation")
 }}
 
