--- a/wherehows-web/app/templates/components/search/search-facet.hbs
+++ b/wherehows-web/app/templates/components/search/search-facet.hbs
@@ -21,7 +21,7 @@
             checked=(readonly checked)
             change=(action onChange facet facetValue)
             }}
-          <label for="{{facetValue.value}}" class="search-facet__checkbox-wrapper">
+          <label for="{{facetValue.value}}" class="search-facet__checkbox-wrapper checkbox-input__wrapper">
             <span class="search-facet__label">{{facetValue.label}}</span>
             <span class="search-facet__count">{{readonly count}}</span>
           </label>
