--- a/wherehows-web/app/templates/datasets/dataset.hbs
+++ b/wherehows-web/app/templates/datasets/dataset.hbs
@@ -125,6 +125,7 @@
         urn=encodedUrn
         deprecated=model.deprecated
         deprecationNote=model.deprecationNote
+        wikiLinks=wikiLinks
       }}
     {{/tabs.tabpanel}}
 
