Dataset deprecation notice wording change

--- a/wherehows-web/app/templates/components/dataset-deprecation.hbs
+++ b/wherehows-web/app/templates/components/dataset-deprecation.hbs
@@ -91,7 +91,7 @@
         change=(action "onAcknowledgeDeprecationNotice")}}
 
       <label for="acknowledge-deprecation">
-        <p>By checking this box, you acknowledge that you must keep this dataset compliant even after it is deprecated.</p>
+        <p>By checking this box, you acknowledge that you must keep this dataset compliance updated even after it is deprecated.</p>
         <p>
           For more information on how to decommission your dataset, please follow this link:
           <a href={{wikiLinks.datasetDecommission}} target="_blank">
