Change properties tab to status tab

--- a/wherehows-web/app/templates/datasets/dataset.hbs
+++ b/wherehows-web/app/templates/datasets/dataset.hbs
@@ -79,7 +79,7 @@
 
         {{#unless isPinot}}
           {{#tablist.tab tabIds.Properties on-select=(action "tabSelectionChanged")}}
-            Properties
+            Status
           {{/tablist.tab}}
         {{/unless}}
 
