--- a/wherehows-web/app/templates/components/dataset-deprecation.hbs
+++ b/wherehows-web/app/templates/components/dataset-deprecation.hbs
@@ -94,7 +94,7 @@
         <p>By checking this box, you acknowledge that you must keep this dataset compliance updated even after it is deprecated.</p>
         <p>
           For more information on how to decommission your dataset, please follow this link:
-          <a href={{wikiLinks.datasetDecommission}} target="_blank">
+          <a href={{wikiLinks.datasetDecommission}} target="_blank" rel="noopener">
             Dataset Decommission
           </a>
         </p>
