updates last saved by to integrate with newly added properties on GET response for owner and actor

--- a/wherehows-web/app/styles/components/last-saved-by/last-saved-by.scss
+++ b/wherehows-web/app/styles/components/last-saved-by/last-saved-by.scss
@@ -10,3 +10,9 @@
     margin: item-spacing(0 1);
   }
 }
+
+.last-saved-by-container {
+  text-align: right;
+  margin-left: auto;
+  padding: item-spacing(3 0);
+}
