--- a/wherehows-web/app/templates/components/dataset-compliance.hbs
+++ b/wherehows-web/app/templates/components/dataset-compliance.hbs
@@ -77,7 +77,7 @@
       {{/if}}
 
       <div class="secondary-actions">
-        <div class="policy-last-saved">
+        <div class="last-saved-by-container">
           {{last-saved-by actor=complianceInfo.modifiedBy time=complianceInfo.modifiedTime}}
         </div>
       </div>
