--- a/wherehows-web/app/templates/components/datasets/containers/dataset-ownership.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/dataset-ownership.hbs
@@ -30,8 +30,8 @@
 
     {{else}}
 
-      <div class="ownership-metadata">
-        {{last-saved-by actor=ownershipMetadata.actor time=ownershipMetadata.modificationTime}}
+      <div class="last-saved-by-container">
+        {{last-saved-by actor=ownershipMetadata.actor time=ownershipMetadata.lastModified}}
       </div>
 
       {{dataset-authors
