Replace aupac-typeahead with power-select

--- a/wherehows-web/app/styles/app.scss
+++ b/wherehows-web/app/styles/app.scss
@@ -2,6 +2,7 @@
 
 @import 'bootstrap';
 @import 'ember-power-select';
+@import 'ember-power-select-typeahead';
 @import 'ember-power-calendar';
 
 @import 'abstracts/all';
