updates StackedAvatarList component api with action to handle menu option selection

--- a/wherehows-web/app/templates/components/datasets/containers/dataset-owner-list.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/dataset-owner-list.hbs
@@ -1,1 +1,5 @@
-{{avatars/stacked-avatars-list avatars=avatars avatarType="owner"}}
+{{avatars/stacked-avatars-list
+  avatars=avatars
+  handleAvatarOptionSelection=onOwnerOptionSelected
+  avatarType="owner"
+}}
