Fix typo in compliance that stops edit mode for annotations

--- a/wherehows-web/app/templates/components/dataset-compliance.hbs
+++ b/wherehows-web/app/templates/components/dataset-compliance.hbs
@@ -179,7 +179,7 @@
             foldedChangeSet=(readonly foldedChangeSet)
             unspecifiedTags=(readonly unspecifiedTags)
             setUnspecifiedTagsAsNoneTask=setUnspecifiedTagsAsNoneTask
-            toggleEditing=toggleEditing
+            toggleEditing=(action toggleEditing)
             showGuidedEditMode=(action "onShowGuidedEditMode")
             fieldReviewChange=(action "onFieldReviewChange")}}
             {{partial "datasets/dataset-compliance/dataset-compliance-entities"}}
