Replace aupac-typeahead with power-select: more PR comments

--- a/wherehows-web/app/templates/components/search/containers/search-box.hbs
+++ b/wherehows-web/app/templates/components/search/containers/search-box.hbs
@@ -1,1 +1,1 @@
-{{yield keyword placeholder (perform onUserType) (action onSearch)}}
+{{yield keyword placeholder (perform onTypeahead) (action onSearch)}}
