--- a/wherehows-web/app/templates/components/search/search-box.hbs
+++ b/wherehows-web/app/templates/components/search/search-box.hbs
@@ -9,7 +9,7 @@
       loadingMessage=''
       noMatchesMessage=''
       renderInPlace=true
-      search=(action onBeforeUserType)
+      search=(action typeahead)
       oninput=(action onInput)
       onchange=(action onChange)
       onblur=(action onBlur)
