--- a/wherehows-web/app/templates/application.hbs
+++ b/wherehows-web/app/templates/application.hbs
@@ -10,11 +10,11 @@
           Search for datasets
         </header>
         <section class="nacho-hero__content">
-          {{#search/containers/search-box as |keyword placeholder onUserType onSearch|}}
+          {{#search/containers/search-box as |keyword placeholder onTypeahead onSearch|}}
             {{search/search-box
               placeholder=placeholder
               text=(readonly keyword)
-              onUserType=(action onUserType)
+              onTypeahead=(action onTypeahead)
               onSearch=(action onSearch)}}
           {{/search/containers/search-box}}
         </section>
