Advanced search autocomplete (#1443)
MP=wherehows-frontend
TO_COMMIT=067b514ddae957b14c007c62cba7124e5ee8af01
FROM_COMMIT=a7a6163cf41ee86be2dd903bfc618c71f1b92cfc

--- a/wherehows-web/app/styles/components/user-lookup/_pwr-user-lookup.scss
+++ b/wherehows-web/app/styles/components/user-lookup/_pwr-user-lookup.scss
@@ -3,11 +3,11 @@
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
 
     .ember-power-select-typeahead-input {
       color: get-color(black, 0.5);
       border: none;
-      width: 178px;
       box-sizing: border-box;
     }
   }
@@ -17,6 +17,7 @@
 
     .ember-power-select-typeahead-trigger {
       background: transparent;
+      border: 1px solid get-color(gray4);
 
       .ember-power-select-typeahead-input {
         background: transparent;
