Remove local facet construction for platform and origin autocomplete facets, update tests for autocomplete platform and origin

--- a/datahub-web/packages/data-portal/app/templates/components/dataset-authors.hbs
+++ b/datahub-web/packages/data-portal/app/templates/components/dataset-authors.hbs
@@ -13,7 +13,7 @@
     <thead>
       <tr>
         <th class="dataset-author-column--extra-wide">
-          LDAP Username
+          Username
         </th>
         <th class="dataset-author-column--extra-wide">Full Name</th>
         <th class="dataset-author-column--narrow">ID Type</th>
